# qmckl_minicode

./: .gitignore  CMakeLists.txt  README.md  compile.sh
cmake/: FindQMCKL_GPU.cmake
src/: c_lister.c  comparator.F90  comparator_with_pseudo.F90  constants.F90  makefun.F90  makefun_tester.F90  provider_makefun.F90  provider_pseudo_makefun.F90  provider_pseudo_makefun_old.F90  provider_pseudo_qmckl.F90  provider_qmckl.F90  provider_qmckl_gpu.F90  qmckl_example_scratch.F90  qmckl_gpu.F90  qmckl_gpu_cpu_compare.F90  qmckl_gpu_example_trexio.F90  qmckl_gpu_helpers.F90  qmckl_helpers.F90  qmckl_reader.F90  qmckl_runner.F90  test_makefun_qmckl.F90
src/assemble/: .gitignore  assemble.py  makefun_header.f90  orb_1.f90  orb_16.f90  orb_2.f90  orb_26.f90  orb_36.f90  orb_37,68.f90  orb_48.f90  orb_90.f90  orb_90:99.f90  orb_93.f90  orc_91.f90  orc_92.f90  orc_94.f90
tests/comparator/: CMakeLists.txt
tests/comparator_with_pseudo/: CMakeLists.txt
tests/gpu_cpu_compare/: CMakeLists.txt
tests/makefun_tester/: CMakeLists.txt
tests/openmp/: CMakeLists.txt
tests/reader/: CMakeLists.txt
tests/reader/pyscf/: H.chk  convertfort10mol.input  fort.10  h  h.h5  h.hdf5  h_cart.h5  makefort10.input  run.py  structure.xsf
tests/reader_gpu/: CMakeLists.txt  h.hdf5
tests/with_qmckl_h/: CMakeLists.txt  h.hdf5
